src/eleventy/content/_includes/v24.2/performance/reduce-contention.md
- Limit the number of affected rows by following [optimizing queries]({% link "{{ page.version.version }}/apply-statement-performance-rules.md" %}) (e.g., avoiding full scans, creating secondary indexes, etc.). Not only will transactions run faster, lock fewer rows, and hold locks for a shorter duration, but the chances of [read invalidation]({% link "{{ page.version.version }}/architecture/transaction-layer.md" %}#read-refreshing) when the transaction's [timestamp is pushed]({% link "{{ page.version.version }}/architecture/transaction-layer.md" %}#timestamp-cache), due to a conflicting write, are decreased because of a smaller read set (i.e., a smaller number of rows read).

- Break down larger transactions (e.g., [bulk deletes]({% link "{{ page.version.version }}/bulk-delete-data.md" %})) into smaller ones to have transactions hold locks for a shorter duration. For example, use [common table expressions]({% link "{{ page.version.version }}/common-table-expressions.md" %}) to group multiple clauses together in a single SQL statement. This will also decrease the likelihood of [pushed timestamps]({% link "{{ page.version.version }}/architecture/transaction-layer.md" %}#timestamp-cache). For instance, as the size of writes (number of rows written) decreases, the chances of the transaction's timestamp getting bumped by concurrent reads decreases.

- Use [`SELECT FOR UPDATE`]({% link "{{ page.version.version }}/select-for-update.md" %}) to aggressively lock rows that will later be updated in the transaction. Updates must operate on the most recent version of a row, so a concurrent write to the row will cause a retry error ([`RETRY_WRITE_TOO_OLD`]({% link "{{ page.version.version }}/transaction-retry-error-reference.md" %}#retry_write_too_old)). Locking early in the transaction forces concurrent writers to block until the transaction is finished, which prevents the retry error. Note that this locks the rows for the duration of the transaction; whether this is tenable will depend on your workload. For more information, see [When and why to use `SELECT FOR UPDATE` in CockroachDB](https://www.cockroachlabs.com/blog/when-and-why-to-use-select-for-update-in-cockroachdb/).

- Use historical reads ([`SELECT ... AS OF SYSTEM TIME`]({% link "{{ page.version.version }}/as-of-system-time.md" %})), preferably [bounded staleness reads]({% link "{{ page.version.version }}/follower-reads.md" %}#when-to-use-bounded-staleness-reads) or [exact staleness with follower reads]({% link "{{ page.version.version }}/follower-reads.md" %}#run-queries-that-use-exact-staleness-follower-reads) when possible to reduce conflicts with other writes. This reduces the likelihood of [`RETRY_SERIALIZABLE`](transaction-retry-error-reference.html#retry_serializable) errors as fewer writes will happen at the historical timestamp. More specifically, writes' timestamps are less likely to be pushed by historical reads as they would [when the read has a higher priority level](architecture/transaction-layer.html#transaction-conflicts). Note that if the `AS OF SYSTEM TIME` value is below the closed timestamp, the read cannot be invalidated.

- When replacing values in a row, use [`UPSERT`]({% link "{{ page.version.version }}/upsert.md" %}) and specify values for all columns in the inserted rows. This will usually have the best performance under contention, compared to combinations of [`SELECT`]({% link "{{ page.version.version }}/select-clause.md" %}), [`INSERT`]({% link "{{ page.version.version }}/insert.md" %}), and [`UPDATE`](update.html).

- If applicable to your workload, assign [column families]({% link "{{ page.version.version }}/column-families.md" %}#default-behavior) and separate columns that are frequently read and written into separate columns. Transactions will operate on disjoint column families and reduce the likelihood of conflicts. 

- As a last resort, consider adjusting the [closed timestamp interval]({% link "{{ page.version.version }}/architecture/transaction-layer.md" %}#closed-timestamps) using the `kv.closed_timestamp.target_duration` [cluster setting]({% link "{{ page.version.version }}/cluster-settings.md" %}) to reduce the likelihood of long-running write transactions having their [timestamps pushed]({% link "{{ page.version.version }}/architecture/transaction-layer.md" %}#timestamp-cache). This setting should be carefully adjusted if **no other mitigations are available** because there can be downstream implications (e.g., historical reads, change data capture feeds, statistics collection, handling zone configurations, etc.). For example, a transaction _A_ is forced to refresh (i.e., change its timestamp) due to hitting the maximum [_closed timestamp_]({% link "{{ page.version.version }}/architecture/transaction-layer.md" %}#closed-timestamps) interval (closed timestamps enable [Follower Reads](follower-reads.html#how-stale-follower-reads-work) and [Change Data Capture (CDC)](change-data-capture-overview.html)). This can happen when transaction _A_ is a long-running transaction, and there is a write by another transaction to data that _A_ has already read.

{{site.data.alerts.callout_info}}
If you increase the `kv.closed_timestamp.target_duration` setting, it means that you are increasing the amount of time by which the data available in [Follower Reads]({% link "{{ page.version.version }}/follower-reads.md" %}) and [CDC changefeeds]({% link "{{ page.version.version }}/change-data-capture-overview.md" %}) lags behind the current state of the cluster. In other words, there is a trade-off here: if you absolutely must execute long-running transactions that execute concurrently with other transactions that are writing to the same data, you may have to settle for longer delays on Follower Reads and/or CDC to avoid frequent serialization errors. The anomaly that would be exhibited if these transactions were not retried is called [write skew](https://www.cockroachlabs.com/blog/what-write-skew-looks-like/).
{{site.data.alerts.end}}